2007-02-03  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man4/rmux.4.man: added: roughing in RMUX driver
	* src/drivers/rmux.c: added: roughing in RMUX driver
	* src/drivers/rmux.h: added: roughing in RMUX driver

2007-01-28  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/strsctp.refs: updated references

2007-01-25  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am: sctp_hooks.h should not be distributed

2007-01-09  Brian Bidulock  <bidulock@openss7.org>

	* .pkgrelease: bumped version number for next release
	* doc/manual/news.texi: bumped version number for next release
	* scripts/texi/versions.texi: bumped version number for next release

	* ANNOUNCE: final post-release updates
	* AUTHORS: final post-release updates
	* NEWS: final post-release updates
	* README: final post-release updates
	* README-cvs: final post-release updates
	* THANKS: final post-release updates
	* doc/manual/news.texi: final post-release updates

2007-01-08  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updated for release
	* NEWS: updated for release
	* README: updated for release
	* README-cvs: updated for release
	* THANKS: updated for release
	* doc/manual/descrip.texi: updated for release
	* doc/manual/news.texi: updated for release
	* doc/manual/releases.texi: updated for release
	* doc/manual/tree.texi: updated for release

	* acinclude.m4: correct device base

	* rel20070108_A.html: added release file
	* ANNOUNCE: updated for release

2007-01-05  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man5/strsctp.5.man: doc updates
	* doc/manual/releases.texi: doc updates
	* doc/manual/strsctp.texi: doc updates
	* doc/manual/tree.texi: doc updates

2007-01-03  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updated documentation for release
	* NEWS: updated documentation for release
	* README: updated documentation for release
	* README-cvs: updated documentation for release
	* THANKS: updated documentation for release