@@ -1,7 +1,7 @@
 '\" rtp
 .\" -*- nroff -*- vim: ft=nroff nocin nosi tw=100
 .\"
-.\" @(#) $Id: ua_as_ioctl.4.man,v 1.1.2.1 2007/02/03 03:05:10 brian Exp $
+.\" @(#) $Id: ua_as_ioctl.4.man,v 0.9.2.2 2007/02/10 22:32:05 brian Exp $
 .\"
 .\" =========================================================================
 .\"
@@ -53,11 +53,14 @@
 .\" 
 .\" =========================================================================
 .\"
-.\" Last Modified $Date: 2007/02/03 03:05:10 $ by $Author: brian $
+.\" Last Modified $Date: 2007/02/10 22:32:05 $ by $Author: brian $
 .\"
 .\" -------------------------------------------------------------------------
 .\"
 .\" $Log: ua_as_ioctl.4.man,v $
+.\" Revision 0.9.2.2  2007/02/10 22:32:05  brian
+.\" - working up sigtran drivers
+.\"
 .\" Revision 1.1.2.1  2007/02/03 03:05:10  brian
 .\" - added new files
 .\"
