@@ -1,7 +1,7 @@
 ## vim: ft=config comments=b\:#,b\:##,b\:#\! formatoptions+=tcqlor
 ## =============================================================================
 ## 
-# @(#) $RCSfile: Config.in,v $ $Name:  $($Revision: 0.9.2.2 $) $Date: 2007/01/23 10:00:45 $
+# @(#) $RCSfile: Config.in,v $ $Name:  $($Revision: 0.9.2.3 $) $Date: 2007/02/10 22:32:06 $
 ##
 ## -----------------------------------------------------------------------------
 ##
@@ -46,11 +46,14 @@
 ##
 ## -----------------------------------------------------------------------------
 ##
-## Last Modified $Date: 2007/01/23 10:00:45 $ by $Author: brian $
+## Last Modified $Date: 2007/02/10 22:32:06 $ by $Author: brian $
 ##
 ## -----------------------------------------------------------------------------
 ##
 ## $Log: Config.in,v $
+## Revision 0.9.2.3  2007/02/10 22:32:06  brian
+## - working up sigtran drivers
+##
 ## Revision 0.9.2.2  2007/01/23 10:00:45  brian
 ## - added test program and m2ua-as updates
 ##
