@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: sua_as.c,v $ $Name:  $($Revision: 1.1.2.1 $) $Date: 2007/02/03 03:05:15 $
+ @(#) $RCSfile: sua_as.c,v $ $Name:  $($Revision: 0.9.2.2 $) $Date: 2007/02/10 22:32:10 $
 
  -----------------------------------------------------------------------------
 
@@ -45,19 +45,22 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2007/02/03 03:05:15 $ by $Author: brian $
+ Last Modified $Date: 2007/02/10 22:32:10 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: sua_as.c,v $
+ Revision 0.9.2.2  2007/02/10 22:32:10  brian
+ - working up sigtran drivers
+
  Revision 1.1.2.1  2007/02/03 03:05:15  brian
  - added new files
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: sua_as.c,v $ $Name:  $($Revision: 1.1.2.1 $) $Date: 2007/02/03 03:05:15 $"
+#ident "@(#) $RCSfile: sua_as.c,v $ $Name:  $($Revision: 0.9.2.2 $) $Date: 2007/02/10 22:32:10 $"
 
-static char const ident[] = "$RCSfile: sua_as.c,v $ $Name:  $($Revision: 1.1.2.1 $) $Date: 2007/02/03 03:05:15 $";
+static char const ident[] = "$RCSfile: sua_as.c,v $ $Name:  $($Revision: 0.9.2.2 $) $Date: 2007/02/10 22:32:10 $";
 
 /*
  *  This is an SUA multiplexing driver for the AS side of the ASP-SGP communications.  It works like
@@ -160,7 +163,7 @@ static char const ident[] = "$RCSfile: sua_as.c,v $ $Name:  $($Revision: 1.1.2.1
 /* ============================== */
 
 #define SUA_AS_DECRIP		"SUA/SCTP AS SCCP STREAMS MULTIPLEXING DRIVER."
-#define SUA_AS_REVISION		"OpenSS7 $RCSfile: sua_as.c,v $ $Name:  $ ($Revision: 1.1.2.1 $) $Date: 2007/02/03 03:05:15 $"
+#define SUA_AS_REVISION		"OpenSS7 $RCSfile: sua_as.c,v $ $Name:  $ ($Revision: 0.9.2.2 $) $Date: 2007/02/10 22:32:10 $"
 #define SUA_AS_COPYRIGHT	"Copyright (c) 1997-2006 OpenSS7 Corporation.  All Rights Reserved."
 #define SUA_AS_DEVICE		"Part of the OpenSS7 Stack for Linux Fast-STREAMS."
 #define SUA_AS_CONTACT		"Brian Bidulock <bidulock@openss7.org>"
