@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $Id: ua_as_ioctl.h,v 1.1.2.1 2007/02/03 03:05:18 brian Exp $
+ @(#) $Id: ua_as_ioctl.h,v 0.9.2.2 2007/02/10 22:32:15 brian Exp $
 
  -----------------------------------------------------------------------------
 
@@ -45,11 +45,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2007/02/03 03:05:18 $ by $Author: brian $
+ Last Modified $Date: 2007/02/10 22:32:15 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: ua_as_ioctl.h,v $
+ Revision 0.9.2.2  2007/02/10 22:32:15  brian
+ - working up sigtran drivers
+
  Revision 1.1.2.1  2007/02/03 03:05:18  brian
  - added new files
 
@@ -58,7 +61,7 @@
 #ifndef __SYS_UA_AS_IOCTL_H__
 #define __SYS_UA_AS_IOCTL_H__
 
-#ident "@(#) $RCSfile: ua_as_ioctl.h,v $ $Name:  $($Revision: 1.1.2.1 $) Copyright (c) 2001-2007 OpenSS7 Corporation."
+#ident "@(#) $RCSfile: ua_as_ioctl.h,v $ $Name:  $($Revision: 0.9.2.2 $) Copyright (c) 2001-2007 OpenSS7 Corporation."
 
 /* This file can be processed by doxygen(1). */
 
