@@ -1,7 +1,7 @@
 ## vim: ft=config comments=b\:#,b\:##,b\:#\! formatoptions+=tcqlor
 ## =============================================================================
 ## 
-# @(#) $RCSfile: Config.in,v $ $Name:  $($Revision: 0.9.2.4 $) $Date: 2006/12/23 13:06:56 $
+# @(#) $RCSfile: Config.in,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2007/02/10 22:32:17 $
 ##
 ## -----------------------------------------------------------------------------
 ##
@@ -46,11 +46,14 @@
 ##
 ## -----------------------------------------------------------------------------
 ##
-## Last Modified $Date: 2006/12/23 13:06:56 $ by $Author: brian $
+## Last Modified $Date: 2007/02/10 22:32:17 $ by $Author: brian $
 ##
 ## -----------------------------------------------------------------------------
 ##
 ## $Log: Config.in,v $
+## Revision 0.9.2.5  2007/02/10 22:32:17  brian
+## - working up sigtran drivers
+##
 ## Revision 0.9.2.4  2006/12/23 13:06:56  brian
 ## - manual page and other package updates for release
 ##
